--- a/gushi.html
+++ b/gushi.html
@@ -1,7 +1,7 @@
 望岳</br>
-  杜甫
-岱宗夫如何？齐鲁青未了。
-造化钟神秀，阴阳割昏晓。
-荡胸生曾云，决眦入归鸟。
-会当凌绝顶，一览众山小。
+  杜甫</br>
+岱宗夫如何？齐鲁青未了。</br>
+造化钟神秀，阴阳割昏晓。</br>
+荡胸生曾云，决眦入归鸟。</br>
+会当凌绝顶，一览众山小。</br>
   
