--- a/gushi.html
+++ b/gushi.html
@@ -1,7 +1,16 @@
-望岳</br>
-  杜甫</br>
-岱宗夫如何？齐鲁青未了。</br>
-造化钟神秀，阴阳割昏晓。</br>
-荡胸生曾云，决眦入归鸟。</br>
-会当凌绝顶，一览众山小。</br>
-  
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>古诗<title>
+</head>
+<body>  
+  <h1>望岳</h1>
+  <h2>杜甫</h2>
+  <p>岱宗夫如何？齐鲁青未了。</p>
+ <p>造化钟神秀，阴阳割昏晓。</p>
+ <p>荡胸生曾云，决眦入归鸟。</p>
+ <p>会当凌绝顶，一览众山小。</p>
+ </body>  
+
+</html>
